[tool.poetry]
name = "hatianph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
pytesseract = "*"
jupyterlab = "^4.2.4"
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"
cloudinary = "^1.41.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"